force-app/main/default/objects/System_Level_Parameter__c/System_Level_Parameter__c.object-meta.xml
<CustomObject>
    <description>NCMT System Level Parameters.</description>
    <label>System Level Parameter</label>
    <nameField>
        <label>System Level Parameter Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>System Level Parameters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>