force-app/main/default/objects/System_Level_Parameter__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>Category</description>
    <label>Category</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>