force-app/main/default/objects/System_Level_Parameter__c/fields/Value__c.field-meta.xml
<CustomField>
    <fullName>Value__c</fullName>
    <description>Value</description>
    <label>Value</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>